# srbounce

./: .gitignore  CLAUDE.md  README.md  build.sh  config.yaml  pyproject.toml  run.py  sweep.py
livesignal/: .env.example  .gitignore  Dockerfile  README.md  config.py  config.yaml  docker-compose.yml  notify.py  paper.py  pyproject.toml
livesignal-tmp/: .gitignore  docker-compose.yml
livesignal/livesignal/: broker.py  chart.py  notify.py  risk.py  store.py  trader.py
results/: sl_analysis_2026-07-24.md  sweep_2026-07-24.csv
srbounce/: data.py  engine.py  signals.py  zones.py
tests/: replay_parity.py
