[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srbounce"
version = "0.1.0"
description = "S/R bounce reversal strategy: walk-forward zone detection + candle confirmation + backtest engine"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "pyarrow",
    "ccxt",
]

[tool.setuptools]
packages = ["srbounce"]
